feat: api to kill nodes
